--- a/pets/css/style.css
+++ b/pets/css/style.css
@@ -110,10 +110,19 @@ footer {
 }
 main {
     padding: 20px;
+
+    
 }
 
 section {
     border: 1px solid black; 
     padding: 10px;
     margin-bottom: 20px;
+}
+
+.imag {
+   display: flex;
+   justify-content: center;
+   margin: 20px;
+
 }
